# SlicerSkeletalRepresentation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SuperBuild.cmake
CommonLibrary/: CMakeLists.txt  EllipticalSRep.cpp  Point3d.cpp  ReadHeaderFile.cpp  ReadHeaderFile.h  RectangularGridSRep.cpp  SRep.cpp  SRepIO.cpp  SkeletalPoint.cpp  Spoke.cpp  SpokeMesh.cpp  Vector3d.cpp
CommonLibrary/include/srep/: EllipticalSRep.h  Exceptions.h  MeshSRepInterface.h  Point3d.h  RectangularGridSRep.h  SRep.h  SRepIO.h  SkeletalPoint.h  Spoke.h  SpokeMesh.h  Util.h  Vector3d.h
CommonLibrary/testing/: CMakeLists.txt  Point3dTest.cpp  SRepIOTest.cpp  SkeletalPointTest.cpp  SpokeTest.cpp  Vector3dTest.cpp
EvolutionarySRep/: CMakeLists.txt  EvolutionarySRep.py
EvolutionarySRep/EvolutionarySRepUtil/: __init__.py
EvolutionarySRep/Resources/Libraries/: smooth_cyclic_curves.py
EvolutionarySRep/Resources/Libraries/shanapy_private/: .gitignore  centers_of_curvature.py  check_hotdog_num_vertices.py  ellipsoid_srep_coords.py  explore_srep.py  fitting_srep_to_quasi.py  generate_points_vtk.py  make_and_visualize_mesh.py  nick_srep.py  refiner.py  refiner_wrapper_nick.py  test_fitting_srep_to_quasi.py  test_nick_srep.py  test_skeletal_regularization.py  test_zhiyuan_refiner.py
EvolutionarySRep/Resources/Libraries/shanapy_private/shanapy/: __init__.py
EvolutionarySRep/Resources/Libraries/shanapy_private/shanapy/models/: __init__.py  akash_fit_srep.py  backward_mcf.py  cmd_initialize_srep.py  compute_linking.py  compute_linking_test.py  curvedSrep.py  curvedSrep_bak.py  ellipsoid_srep_coords.py  fit2D.py  fit2D_bak.py  functional_maps.py  implied_surface.py  local_frame_plus.py  local_frames.py  mean_curvature_flow.py  more_spokes_joint_analysis.py  multi_object_shape_analysis.py  multi_view_geodesics.py  my_ajive.py  principal_nested_spheres.py  shape_model.py  spike_and_slab.py  spoke.py  srep.py  srep_fitter.py  srep_fitter_test.py  srep_io.py  supervised_pns.py  supervised_pns_bak.py  svm_classifier.py  test_srep_fitter_nick.py
EvolutionarySRep/Resources/Libraries/shanapy_private/shanapy/models/sreps/: refiner.py
EvolutionarySRep/Resources/Libraries/shanapy_private/shanapy/utils/: __init__.py  characterize_indep_populations.py  characterize_population_with_mean_std.py  compare_poly_data.py  inspect_linking.py  interpolate_srep.py  link_data_loader.py  link_dataset.py  load_sreps_data.py  obtain_class_labels.py  procrustes.py  s2_geometry.py  s2_geometry_test.py  test_srep_consistency.py  visualize_mean_shape.py  visualize_sigma_shape.py  visualize_srep.py  visualize_srep_fit.py  viz.py
EvolutionarySRep/Resources/Libraries/shanapy_private/zhiyuan_refinement_test/: convert_nick_srep_to_zhiyuan.py  convert_zhiyuan_srep_to_nick.py  my_investigation.py  nick_to_zhiyuan_srep_index_mapping.pkl  ordering_README.txt  pe_warped.vtk  refine_nicks_data.py  reordered_srep.vtk  srep_before_refinement_after_regularization.vtk  srep_ordered_back.vtk  test_mapping.py
EvolutionarySRep/Resources/UI/: EvolutionarySRep.ui
InitSRepFromSPHARM/: CMakeLists.txt  InitSRepFromSPHARM.cxx  InitSRepFromSPHARM.xml
SRep/: CMakeLists.txt  qSlicerSRepModule.cxx  qSlicerSRepModule.h  qSlicerSRepModuleWidget.cxx  qSlicerSRepModuleWidget.h  qSlicerSRepReader.cxx  qSlicerSRepReader.h  qSlicerSRepWriter.cxx  qSlicerSRepWriter.h
SRep/MRML/: CMakeLists.txt  srepPoint3d.cxx  srepPoint3d.h  srepVector3d.cxx  srepVector3d.h  vtkEllipticalSRep.cxx  vtkEllipticalSRep.h  vtkMRMLEllipticalSRepNode.cxx  vtkMRMLEllipticalSRepNode.h  vtkMRMLRectangularGridSRepNode.cxx  vtkMRMLRectangularGridSRepNode.h  vtkMRMLSRepDisplayNode.cxx  vtkMRMLSRepDisplayNode.h  vtkMRMLSRepNode.cxx  vtkMRMLSRepNode.h  vtkMRMLSRepStorageNode.cxx  vtkMRMLSRepStorageNode.h  vtkMeshSRepInterface.h  vtkSRepExportPolyDataProperties.cxx  vtkSRepExportPolyDataProperties.h  vtkSRepSkeletalPoint.cxx  vtkSRepSkeletalPoint.h  vtkSRepSpoke.cxx  vtkSRepSpoke.h  vtkSRepSpokeMesh.cxx  vtkSRepSpokeMesh.h
SRep/Testing/Cxx/: CMakeLists.txt  Point3dTest.cxx  SRepUnitTestHelpers.h  SkeletalPointTest.cxx  SpokeTest.cxx  Vector3dTest.cxx
SRepCreateAndRefine/: CMakeLists.txt  SRepCreateAndRefine.py
SRepCreator/: CMakeLists.txt  qSlicerSRepCreatorModule.cxx  qSlicerSRepCreatorModule.h  qSlicerSRepCreatorModuleWidget.cxx  qSlicerSRepCreatorModuleWidget.h
SRepCreator/Logic/: CMakeLists.txt  itkThinPlateSplineExtended.h  vtkSlicerSRepCreatorLogic.cxx  vtkSlicerSRepCreatorLogic.h
SRepInitializer/: CMakeLists.txt  qSlicerSRepInitializerModule.cxx  qSlicerSRepInitializerModule.h  qSlicerSRepInitializerModuleWidget.cxx  qSlicerSRepInitializerModuleWidget.h
SRepPipelines/: CMakeLists.txt  SRepPipelines.py
SRepRefinement/: CMakeLists.txt  qSlicerSRepRefinementModule.cxx  qSlicerSRepRefinementModule.h  qSlicerSRepRefinementModuleWidget.cxx  qSlicerSRepRefinementModuleWidget.h
SRepRefiner/: CMakeLists.txt  qSlicerSRepRefinerModule.cxx  qSlicerSRepRefinerModule.h  qSlicerSRepRefinerModuleWidget.cxx  qSlicerSRepRefinerModuleWidget.h
SRepVisualizer/: CMakeLists.txt  SRepVisualizer.py
SRepVisualizer/LegacyTransformer/: srep.py  srep_io.py
SRepVisualizer/Resources/UI/: SRepVisualizer.ui
SRepWarper/: CMakeLists.txt  qSlicerSRepWarperModule.cxx  qSlicerSRepWarperModule.h  (+2 more)
SkeletalRepresentationVisualizer/: CMakeLists.txt  SkeletalRepresentationVisualizer.py
SkeletalRepresentationVisualizer/LegacyTransformer/: ElementTree_pretty.py  legacyTransformer.py  srep.py  srep_io.py
SkeletalRepresentationVisualizer/Testing/test_data/: crest.vtp  hippo.m3d  hippoheader.xml  legacy.m3d  mcfEll.m3d  mcfHippo.m3d  refined_down.vtp  refined_header.xml  refined_up.vtp
SkeletalRepresentationVisualizer/Testing/test_data/hippo/: crest.vtp  header.xml  legacy.m3d  mod_up.vtp
SkeletalRepresentationVisualizer/Testing/test_data/mcfEll/: crest.vtp  down.vtp  header.xml  up.vtp
SkeletalRepresentationVisualizer/Testing/test_data/mcfHippo/: crest.vtp  down.vtp  header.xml  up.vtp
SkeletalRepresentationVisualizer/Testing/test_data/test/: crest.vtp  down.vtp  header.xml  up.vtp
(+150 files in other folders)
